# flext-core

./: $OUT  .bandit  .cursorrules  .dev_deps_backup_20250706  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sonarcloud.properties  .token  .vulture_whitelist.py  .waza.yaml  .waza.yaml.bak  .yamllint.yaml  @  AGENTS.md  ANALISE_CRITICA_FLEXT_CORE.md  ANALISE_CRITICA_PROFUNDA_FLEXT_CORE.md  API_STABILITY.md  ARCHITECTURE.md  ARCHITECTURE_GUIDELINES.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  COMPLETE_DOCUMENTATION_UPDATE.md  CONTRACT_BUDGET.md  CONTRIBUTING.md  CONVERSION_SUMMARY.md  DDD_IMPROVEMENTS_SUMMARY.md  DEPENDENCY_HIERARCHY.md  DEVELOPMENT_STANDARDS.md  DOCSTRING_TEMPLATE_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  ECOSYSTEM_COMPATIBILITY.md  FINAL_ARCHITECTURE_SUMMARY.md  FLEXTCORE_11_IMPLEMENTATION.md  FLEXT_CONFIG_TEMPLATE.py  FLEXT_CORE_PATTERNS.md  FLEXT_EXCEPTIONS_API_GUIDE.md  (+80 more)
.beads/: daemon.lock.bak
.beads/backup/: backup_state.json  manifest
.cursor/: settings.json
.flext-deps/: flext-tests
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  publish.yml  pydantic-v2-validation.yml  release.yml  security.yml  workflow.yaml
.hypothesis/constants/: 00021f4d9e788273  001460687cc50998  0024a1881c46b87b  0024a87cb60c9c2f  0032456141e8d256  004aef52ff8578e5  004c4cb03e6e8803  00550ccaee344a1a  005cbe28081b0f5e  0062779ba20921d1  0062de10665b90e9  006e7adc401c59cb  006fd1f3c389c087  007fc5f02af75055  0080a4bac6c626de  00816492135ef2d4  009160418c6f169d  00a0d5872202a4a2  00e76a27aa5dffb7  00eb88c41633f5e8  01066c5c3ffdeba1  010cb388c66bb86e  01101484ad4561f8  0114eb4c920a29ab  01200cf0f0d32c54  012c65d7c7c36a25  0137f7797e607a41  013a80e35042bf1a  015a37d3ce2c259d  01603e773b05f0ea  016fa779e1e53be5  0170670a400418c0  017f94447c13b234  018b944988a07a78  018da3dec9b6f8b3  0193a4ac3760fc7b  01af9360049e8c7f  (+6727 more)
.qlty/: qlty.toml
.scope/: config.toml
.serena/: project.yml
api-reference/: README.md
architecture/: README.md  clean-architecture.md  decisions.md  overview.md  patterns.md
benchmarks/: bench_result_v2_vs_original.py
config/: config.yaml
development/: contributing.md
docs/: ACTUAL_CAPABILITIES.md  API.md  ARCHITECTURAL_TRUTH.md  BASE_HIERARCHY.md  CHANGELOG.md  COMPONENT_HIERARCHY.md  CONFIG_MIGRATION_GUIDE.md  CORE_ARCHITECTURE_ANALYSIS.md  DOCUMENTATION_IMPROVEMENTS_2025-10-21.md  ERROR_CODES.md  EXCEPTION_HANDLING_GUIDE.md  EXTENDING_FLEXTEXCEPTIONS.md  FLEXT_SEMANTIC_PATTERNS_HARMONIZATION.md  FLEXT_UNIFIED_SEMANTIC_PATTERNS.md  INDEX.md  INTEGRATION_PATTERNS.md  MAINTENANCE_CHECKLIST.md  POC_RESULT_V2_RETURNS_BACKEND.md  PYDANTIC_V2_MIGRATION.md  PYDANTIC_V2_PATTERNS.md  PYDANTIC_V2_QUICK_START.md  QUICK_START.md  README.md  TODO.md  api-reference.md  architecture.md  config_get_method.md  configuration.md  dependency_injector_prompt.md  development.md  examples.md  getting-started.md  index.md  integration.md  plan-end.md  plan-kwargs-automation.md  quick-start.md  troubleshooting.md  types_advanced.md
examples/: 00_single_import_demo.py  01_basic_result.py  01_flext_result_railway_pattern.py  01_railway_result.py  02_dependency_injection.py  02_flext_container_dependency_injection.py  03_cqrs_commands.py  03_flext_commands_cqrs_pattern.py  03_models_basics.py  04_config_basics.py  04_flext_utilities_generation_formatting.py  04_flext_utilities_modular.py  04_validation_modern.py  05_flext_validation_advanced_system.py  05_logging_basics.py  05_utilities_advanced.py  05_validation_advanced.py  06_ddd_entities_value_objects.py  06_decorators_complete.py  06_flext_entity_valueobject_ddd_patterns.py  06_messaging_patterns.py  07_flext_mixins_multiple_inheritance.py  07_mixins_multiple_inheritance.py  07_processing_handlers.py  07_registry_dispatcher.py  08_configuration.py  08_flext_config_enterprise_configuration.py  08_integration_complete.py  09_context_management.py  09_decorators_cross_cutting.py  09_flext_decorators_enterprise_patterns.py  10_cqrs_patterns.py  10_events_messaging.py  10_flext_payload_messaging_events.py  10_utilities_integration.py  11_bus_messaging.py  11_flext_handlers_enterprise_patterns.py  11_handlers_pipeline.py  12_flext_logging_structured_system.py  12_logging_structured.py  (+108 more)
guides/: dependency-injection-advanced.md  development.expected  domain-driven-design.md  logging.md  railway-oriented-programming.md  security.md  settings.md  skill-automation-pattern.md  troubleshooting.md
improvements/: anti-patterns-audit.md  api-references-combined-audit.md  dependency-injection-audit.md  entry-docs-audit.md  getting-started-audit.md  testing-standardization-roadmap.md
refactor/: class-policy-v2.md
reports/: metrics.json  pip-audit.json  security.json
scripts/: README.md  __init__.py  _legacy.py  analyze_coverage.py  analyze_dicts.py  analyze_flext_core_usage.py  analyze_test_coverage_mapping.py  auto_workflow.py  check_pydantic_v2_precommit.py  constants.py  detect_cycles.py  models.py  protocols.py  quality_dashboard.py  run_tests.py  test_ecosystem_integration.sh  typings.py  utilities.py  validate_typings.sh
standards/: development.md  documentation.md  python.md  templates.md
tests/: .env  README.md  TESTING_PATTERNS.md  __init__.py  __init__.pyi  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  _exports_lazy_part_03.py  _exports_lazy_part_04.py  _exports_lazy_part_05.py  _exports_public.py  _exports_typing.py  _exports_typing_facades.py  _exports_typing_integration.py  _exports_typing_unit.py  _models.py  base.py  conftest.py  conftest2.py  conftest_integration.py  conftest_project.py  constants.py  models.py  protocols.py  pyrightconfig.json  shared_test_domain.py  test_basic_functionality.py  test_builders.py  test_config.py  test_constants.py  test_container.py  test_core_functionality.py  test_core_integration.py  test_coverage_boost.py  test_coverage_final.py  test_coverage_gaps.py  test_coverage_minimal.py  test_coverage_mixins.py  test_coverage_pydantic.py  (+32 more)
typings/: __init__.pyi  factory.pyi  factory_boy.pyi
(+2698 files in other folders)
