[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2" ]

[project]
name = "flext-core"
version = "0.12.0-dev"
description = "Enterprise Foundation Framework - Modern Python 3.13 + Clean Architecture"
readme = "README.md"
keywords = [
  "clean-architecture",
  "ddd",
  "enterprise",
  "flext",
  "modern",
  "solid",
]
license = "MIT"
maintainers = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
authors = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]
dependencies = [
  "attrs>=25.4,<26",
  "beartype>=0.19",
  "cachetools>=5.3",
  "dependency-injector>=4.41",
  "docker>=7.1,<8",
  "limits>=3.6",
  "orjson>=3.11.3",
  "pybreaker>=0.8",
  "pydantic>=2.12.3",
  "pydantic-core>=2.41.4",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1",
  "python-on-whales>=0.79,<0.80",
  "pyyaml>=6.0.2",
  "returns>=0.26",
  "structlog>=25.4",
  "wrapt>=1.17,<2",
]
optional-dependencies.dev = [
  "autoflake>=2.3.1",
  "bandit>=1.8",
  "beartype>=0.19",
  "black>=25.1",
  "codespell>=2.3",
  "deptry>=0.23",
  "detect-secrets>=1.5",
  "django-stubs>=5.2.2",
  "factory-boy>=3.3.1",
  "faker>=37.4",
  "hypothesis>=6.125",
  "interrogate>=1.7",
  "isort>=6.0.1",
  "mypy>=1.18.2",
  "pip-audit>=2.7.3",
  "pre-commit>=4.0.1",
  "pylint>=3.3",
  "pytest>=8.4",
  "pytest-benchmark>=5.1",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=6.2",
  "pytest-deadfixtures>=2.2.1",
  "pytest-env>=1.1.5",
  "pytest-mock>=3.14",
  "pytest-randomly>=3.16",
  "pytest-sugar>=1",
  "pytest-timeout>=2.4",
  "pytest-xdist>=3.8",
  "pyupgrade>=3.19",
  "radon>=6.0.1",
  "ruff>=0.12.3",
  "types-cachetools>=5.3",
  "types-docker>=7.1",
  "types-ldap3>=2.9.13.20250622",
  "types-protobuf>=6.30.2.20250703",
  "types-psutil>=7",
  "types-psycopg2>=2.9.21.20250718",
  "types-python-dateutil>=2.9",
  "types-pyyaml>=6.0.12",
  "types-redis>=4.6",
  "types-requests>=2.32.4",
  "types-setuptools>=80.9",
  "types-toml>=0.10.8.20240310",
  "uv>=0.9.6",
  "vulture>=2.13",
]
urls.Documentation = "https://github.com/flext-sh/flext-core/blob/main/README.md"
urls.Homepage = "https://github.com/flext-sh/flext-core"
urls.Repository = "https://github.com/flext-sh/flext-core"

[tool]
[tool.poetry]
packages = [
  { include = "flext_core", from = "src" },
  { include = "flext_tests", from = "src" },
]
group.dev.dependencies.beartype = "^0.22.9"
group.dev.dependencies.click = "^8.3.0"
group.dev.dependencies.coverage = "^7.13.1"
group.dev.dependencies.hypothesis = "^6.148.7"
group.dev.dependencies.pyrefly = "^0.46.3"
group.dev.dependencies.pytest = "^9.0.2"
group.dev.dependencies.pytest-cov = "^7.0.0"
group.dev.dependencies.rich = "^14.2.0"
group.dev.dependencies.types-cachetools = "^6.2.0.20251022"
group.dev.dependencies.types-colorama = ">=0.4.15.20240311"
group.dev.dependencies.types-docker = "^7.1.0.20251202"
group.dev.dependencies.types-pexpect = ">=4.9.0.20250516"
group.dev.dependencies.types-pygments = ">=2.19.0.20250715"
group.dev.dependencies.types-pysocks = "^1.7.1.20251001"
group.dev.dependencies.types-pyyaml = "^6.0.12.20250915"
group.dev.dependencies.urllib3 = "^2.6.0"

[tool.ruff]
extend = "../ruff-shared.toml"
lint.isort.known-first-party = []

[tool.codespell]
ignore-words-list = "dn,cn,ou,uid,sn,aci,acl,ldif,flext,FLEXT,dbt,oic,wms,grpc,meltano,protobuf,creds,assertIn"
skip = """\
  .git,*.lock,*.egg-info,dist,build,.venv,__pycache__,.mypy_cache,.pytest_cache,.ruff_cache,node_modules,vendor,*.pb2*.\
  py\
  """

[tool.deptry]
known_first_party = [
  "flext",
  "flext_quality",
]
pep621_dev_dependency_groups = [
  "dev",
  "docs",
  "security",
  "test",
  "typings",
]
package_module_name_map.pyyaml = "yaml"
per_rule_ignores.DEP002 = [
  "autoflake",
  "bandit",
  "black",
  "codespell",
  "deptry",
  "detect-secrets",
  "django-stubs",
  "factory-boy",
  "faker",
  "hypothesis",
  "interrogate",
  "isort",
  "mypy",
  "pip-audit",
  "pre-commit",
  "pylint",
  "pyrefly",
  "pytest",
  "pytest-benchmark",
  "pytest-clarity",
  "pytest-cov",
  "pytest-deadfixtures",
  "pytest-env",
  "pytest-mock",
  "pytest-randomly",
  "pytest-sugar",
  "pytest-timeout",
  "pytest-xdist",
  "pyupgrade",
  "radon",
  "ruff",
  "types-cachetools",
  "types-colorama",
  "types-docker",
  "types-ldap3",
  "types-pexpect",
  "types-protobuf",
  "types-psutil",
  "types-psycopg2",
  "types-pygments",
  "types-pysocks",
  "types-python-dateutil",
  "types-pyyaml",
  "types-redis",
  "types-requests",
  "types-setuptools",
  "types-toml",
  "uv",
  "vulture",
  # Runtime deps used indirectly (pydantic-settings, etc.)
  "attrs",
  "limits",
  "pybreaker",
  "pydantic-core",
  "python-dotenv",
  "wrapt",
]
exclude = [
  ".archive",
  ".git",
  ".meltano",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "htmlcov",
  "node_modules",
  "reports",
  "scripts",
  "tests",
  "vendor",
  "venv",
]
extend_exclude = [
  "flexcore/",
  "flext-.*/",
]

[tool.pytest]
ini_options.addopts = [
  "--strict-config",
  "--strict-markers",
  "--tb=short",
  "-p no:sugar",
  "-q",
  "-ra",
  "--timeout=30",
  "--timeout-method=signal",
  "--durations=0",
]
ini_options.pythonpath = [
  ".",
  "src",
]
ini_options.filterwarnings = [
  "ignore::DeprecationWarning:pyasn1(.*|$)",
]
ini_options.markers = [
  "docker: marca testes que requerem Docker",
  "e2e: marca testes como testes de integração end-to-end",
  "edge_cases: marca testes de casos extremos",
  "integration: marca testes como testes de integração",
  "integrity: marca testes de integridade",
  "oracle: marca testes específicos do Oracle",
  "performance: marca testes de performance",
  "resilience: marca testes de resiliência",
  "slow: marca testes como execução lenta",
  "stress: marca testes de stress",
  "unit: marca testes como testes unitários",
]
ini_options.minversion = "8.0"
ini_options.python_classes = [ "Test*" ]
ini_options.python_files = [
  "*_test.py",
  "*_tests.py",
  "test_*.py",
]
ini_options.python_functions = [ "test_*" ]
ini_options.testpaths = [
  "tests/",
]

[tool.coverage]
run.omit = [
  "*/dependency_injector/*.pxd",
  "*/dependency_injector/*.pyx",
  "*/flext_tests/*",
]
run.source = [ "src/flext_core" ]
report.fail_under = 100
report.omit = [
  "*/dependency_injector/*.pxd",
  "*/dependency_injector/*.pyx",
  "*/flext_tests/*",
]
report.precision = 2

[tool.mypy]
cache_dir = ".mypy_cache"
check_untyped_defs = true
color_output = true
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
exclude = [
  ".*/generate_config.py",
  ".*/manage.py",
  ".*_pb2\\.py$",
  ".*_pb2_grpc\\.py$",
  ".coverage.*",
  ".git/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  ".venv/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "vendor/",
]
extra_checks = true
follow_imports = "silent"
follow_imports_for_stubs = true
incremental = true
local_partial_types = true
namespace_packages = true
no_implicit_optional = true
no_implicit_reexport = true
platform = "linux"
pretty = true
python_version = "3.13"
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
strict_equality = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
mypy_path = [ "..", "../typings", "../typings/generated", "src" ]

[tool.pyrefly]
search-path = [ "..", "../typings", "../typings/generated", "src", "tests", "examples", "scripts" ]
project-excludes = [ "**/*_pb2*.py", "**/*_pb2_grpc*.py" ]

[tool.pyright]
enableTypeIgnoreComments = false
extraPaths = [ "..", "src", "tests", "examples", "scripts", "../typings", "../typings/generated" ]
include = [ "src", "scripts", "tests", "examples" ]
exclude = [
  "**/*.pb2.py",
  "**/*.pb2_grpc.py",
  ".git/",
  ".meltano/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "target/",
]
pythonPlatform = "Linux"
pythonVersion = "3.13"
reportAssertAlwaysTrue = false
reportCallInDefaultInitializer = "error"
reportCallIssue = "error"
reportConstantRedefinition = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportGeneralTypeIssues = "error"
reportImplicitRelativeImport = false
reportImplicitStringConcatenation = "warning"
reportImportCycles = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "warning"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeForm = false
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "warning"
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportMissingParameterType = "error"
reportMissingSuperCall = "warning"
reportMissingTypeArgument = "error"
reportMissingTypeStubs = "warning"
reportOptionalCall = "error"
reportOptionalContextManager = "error"
reportOptionalIterable = "error"
reportOptionalMemberAccess = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
reportPrivateUsage = false
reportPropertyTypeMismatch = "error"
reportSelfClsParameterName = "error"
reportTypedDictNotRequiredAccess = "error"
reportUnboundVariable = "error"
typeCheckingMode = "strict"
reportUninitializedInstanceVariable = "warning"
reportUnknownArgumentType = false
reportUnknownLambdaType = "error"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportUnusedCallResult = "warning"
reportUnusedClass = "warning"
reportUnusedCoroutine = "error"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportWildcardImportFromLibrary = "error"
strictDictionaryInference = true
strictListInference = true
strictParameterNoneValue = true
strictSetInference = true
useLibraryCodeForTypes = true

[tool.bandit]
skips = [ "B404", "B603", "B607", "B105", "B608" ]
exclude_dirs = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "node_modules",
  "tests",
  "vendor",
]

[tool.complexipy]
max_complexity = 15
output_format = "plain"

[tool.vulture]
exclude = [
  ".*/examples/",
  ".*/scripts/",
  ".*/tests/",
  ".coverage.*",
  ".git/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  ".venv/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "tests/",
  "vendor/",
]
min_confidence = 80
paths = [
  "**/src",
  "src",
]
sort_by_size = true
verbose = false
