# [MANAGED] FLEXT pyproject standardization
# Sections with [MANAGED] are enforced by flext_infra.deps.modernizer.
# Sections with [CUSTOM] are project-specific extension points.
# Sections with [AUTO] are derived from workspace layout and dependencies.
# [MANAGED] build system
[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2" ]

# [CUSTOM] project metadata
[project]
name = "flext-core"
version = "0.12.0-dev"
description = "Enterprise Foundation Framework - Modern Python 3.13 + Clean Architecture"
readme = "README.md"
keywords = [
  "clean-architecture",
  "ddd",
  "enterprise",
  "flext",
  "modern",
  "solid",
]
license = "MIT"
maintainers = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
authors = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]
dependencies = [
  "attrs>=25.4,<26",
  "beartype>=0.19",
  "cachetools>=5.3",
  "dependency-injector>=4.41",
  "docker>=7.1,<8",
  "jinja2>=3.1.6",
  "limits>=3.6",
  "orjson>=3.11.3",
  "pybreaker>=0.8",
  "pydantic>=2.12.3",
  "pydantic-core>=2.41.4",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1",
  "python-on-whales>=0.79,<0.80",
  "pyyaml>=6.0.2",
  "returns>=0.26",
  "structlog>=25.4",
  "wrapt>=1.17,<2",
]
# [MANAGED] consolidated development dependencies
# [AUTO] merged from dev/docs/security/test/typings
optional-dependencies.dev = [
    "autoflake>=2.3.1",
    "bandit>=1.8.0",
    "beartype>=0.19",
    "black>=25.1.0",
    "codespell>=2.3.0",
    "deptry>=0.23.0",
    "detect-secrets>=1.5",
    "django-stubs>=5.2.2",
    "factory-boy>=3.3.1",
    "faker>=37.4.0",
    "hypothesis>=6.125.0",
    "interrogate>=1.7",
    "isort>=6.0.1",
    "mkdocs>=1.6.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-encryptcontent-plugin>=2.0.0",
    "mkdocs-exclude>=1.0.0",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-macros-plugin>=1.0.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-newsletter>=0.1.0",
    "mkdocs-print-site-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-versioning>=0.2.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "mypy>=1.18.2",
    "pip-audit>=2.7.3",
    "pre-commit>=4.0.1",
    "pylint>=3.3.0",
    "pytest>=8.4.0",
    "pytest-benchmark>=5.1.0",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=6.2.0",
    "pytest-deadfixtures>=2.2.1",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.0",
    "pytest-randomly>=3.16.0",
    "pytest-sugar>=1.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pyupgrade>=3.19.0",
    "radon>=6.0.1",
    "ruff>=0.12.3",
    "types-cachetools>=5.3",
    "types-docker>=7.1.0",
    "types-ldap3>=2.9.13.20250622",
    "types-protobuf>=6.30.2.20250703",
    "types-psutil>=7.0.0",
    "types-psycopg2>=2.9.21.20250718",
    "types-python-dateutil>=2.9.0",
    "types-pyyaml>=6.0.12",
    "types-redis>=4.6.0",
    "types-requests>=2.32.4",
    "types-setuptools>=80.9.0",
    "types-toml>=0.10.8.20240310",
    "uv>=0.9.6",
    "vulture>=2.13",
]
urls.Documentation = "https://github.com/flext-sh/flext-core/blob/main/README.md"
urls.Homepage = "https://github.com/flext-sh/flext-core"
urls.Repository = "https://github.com/flext-sh/flext-core"

[tool]
[tool.poetry]
packages = [
  { include = "flext_core", from = "src" },
  { include = "flext_infra", from = "src" },
  { include = "flext_tests", from = "src" },
]

[group.dev.dependencies]

# [MANAGED] ruff
[tool.ruff]
extend = "../ruff-shared.toml"
lint.isort.known-first-party = []

# [MANAGED] codespell
[tool.codespell]
ignore-words-list = "dn,cn,ou,uid,sn,aci,acl,ldif,flext,FLEXT,dbt,oic,wms,grpc,meltano,protobuf,creds,assertIn"
skip = ".git,*.lock,*.egg-info,dist,build,.venv,__pycache__,.mypy_cache,.pytest_cache,.ruff_cache,node_modules,typings,vendor,*.pb2*.py"

# [MANAGED] deptry
[tool.deptry]
known_first_party = [
  "flext",
  "flext_quality",
]
pep621_dev_dependency_groups = [
    "dev",
]
package_module_name_map.pyyaml = "yaml"
per_rule_ignores.DEP002 = [
  "autoflake",
  "bandit",
  "black",
  "codespell",
  "deptry",
  "detect-secrets",
  "django-stubs",
  "factory-boy",
  "faker",
  "hypothesis",
  "interrogate",
  "isort",
  "mypy",
  "pip-audit",
  "pre-commit",
  "pylint",
  "pyrefly",
  "pytest",
  "pytest-benchmark",
  "pytest-clarity",
  "pytest-cov",
  "pytest-deadfixtures",
  "pytest-env",
  "pytest-mock",
  "pytest-randomly",
  "pytest-sugar",
  "pytest-timeout",
  "pytest-xdist",
  "pyupgrade",
  "radon",
  "ruff",
  "types-cachetools",
  "types-colorama",
  "types-docker",
  "types-ldap3",
  "types-pexpect",
  "types-protobuf",
  "types-psutil",
  "types-psycopg2",
  "types-pygments",
  "types-pysocks",
  "types-python-dateutil",
  "types-pyyaml",
  "types-redis",
  "types-requests",
  "types-setuptools",
  "types-toml",
  "uv",
  "vulture",
  # Runtime deps used indirectly (pydantic-settings, etc.)
  "attrs",
  "limits",
  "pybreaker",
  "pydantic-core",
  "python-dotenv",
  "wrapt",
]
exclude = [
  ".archive",
  ".git",
  ".meltano",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "htmlcov",
  "node_modules",
  "reports",
  "scripts",
  "tests",
  "typings",
  "vendor",
  "venv",
]
extend_exclude = [
  "flexcore/",
  "flext-.*/",
]

# [MANAGED] pytest
[tool.pytest]
ini_options.addopts = [
  "--strict-config",
  "--strict-markers",
  "--tb=short",
  "-p no:sugar",
  "-q",
  "-ra",
  "--timeout=30",
  "--timeout-method=signal",
  "--durations=0",
]
ini_options.pythonpath = [
  ".",
  "src",
]
ini_options.filterwarnings = [
  "ignore::DeprecationWarning:pyasn1(.*|$)",
]
ini_options.markers = [
  "docker: marca testes que requerem Docker",
  "e2e: marca testes como testes de integração end-to-end",
  "edge_cases: marca testes de casos extremos",
  "integration: marca testes como testes de integração",
  "integrity: marca testes de integridade",
  "oracle: marca testes específicos do Oracle",
  "performance: marca testes de performance",
  "resilience: marca testes de resiliência",
  "slow: marca testes como execução lenta",
  "stress: marca testes de stress",
  "unit: marca testes como testes unitários",
]
ini_options.minversion = "8.0"
ini_options.python_classes = [ "Test*" ]
ini_options.python_files = [
  "*_test.py",
  "*_tests.py",
  "test_*.py",
]
ini_options.python_functions = [ "test_*" ]
ini_options.testpaths = [
  "tests/",
]

# [MANAGED] coverage
[tool.coverage]
run.omit = [
  "*/dependency_injector/*.pxd",
  "*/dependency_injector/*.pyx",
  "*/flext_tests/*",
]
run.source = [ "src/flext_core" ]
report.fail_under = 100
report.omit = [
  "*/dependency_injector/*.pxd",
  "*/dependency_injector/*.pyx",
  "*/flext_tests/*",
]
report.precision = 2

# [MANAGED] mypy
[tool.mypy]
cache_dir = ".mypy_cache"
check_untyped_defs = true
color_output = true
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
exclude = [
  ".*/generate_config.py",
  ".*/manage.py",
  ".*_pb2\\.py$",
  ".*_pb2_grpc\\.py$",
  ".coverage.*",
  ".git/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  ".venv/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "typings/",
  "vendor/",
]
extra_checks = true
follow_imports = "silent"
follow_imports_for_stubs = true
incremental = true
local_partial_types = true
namespace_packages = true
no_implicit_optional = true
no_implicit_reexport = true
platform = "linux"
pretty = true
python_version = "3.13"
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
strict_equality = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
mypy_path = [ "..", "../typings", "../typings/generated", "src" ]

# [MANAGED] pyrefly
[tool.pyrefly]
search-path = [ "..", "../typings", "../typings/generated", "src", "tests", "examples", "scripts" ]
project-excludes = [ "**/*_pb2*.py", "**/*_pb2_grpc*.py" ]

# [MANAGED] pyright
[tool.pyright]
enableTypeIgnoreComments = false
extraPaths = [ "..", "src", "tests", "examples", "scripts", "../typings", "../typings/generated" ]
include = [ "src", "scripts", "tests", "examples" ]
exclude = [
  "**/*.pb2.py",
  "**/*.pb2_grpc.py",
  ".git/",
  ".meltano/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "target/",
  "typings/",
]
pythonPlatform = "Linux"
pythonVersion = "3.13"
reportAssertAlwaysTrue = false
reportCallInDefaultInitializer = "error"
reportCallIssue = "error"
reportConstantRedefinition = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportGeneralTypeIssues = "error"
reportImplicitRelativeImport = false
reportImplicitStringConcatenation = "warning"
reportImportCycles = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "warning"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeForm = false
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "warning"
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportMissingParameterType = "error"
reportMissingSuperCall = "warning"
reportMissingTypeArgument = "error"
reportMissingTypeStubs = "warning"
reportOptionalCall = "error"
reportOptionalContextManager = "error"
reportOptionalIterable = "error"
reportOptionalMemberAccess = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
reportPrivateUsage = false
reportPropertyTypeMismatch = "error"
reportSelfClsParameterName = "error"
reportTypedDictNotRequiredAccess = "error"
reportUnboundVariable = "error"
typeCheckingMode = "strict"
reportUninitializedInstanceVariable = "warning"
reportUnknownArgumentType = false
reportUnknownLambdaType = "error"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportUnusedCallResult = "warning"
reportUnusedClass = "warning"
reportUnusedCoroutine = "error"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportWildcardImportFromLibrary = "error"
strictDictionaryInference = true
strictListInference = true
strictParameterNoneValue = true
strictSetInference = true
useLibraryCodeForTypes = true

[tool.bandit]
skips = [ "B404", "B603", "B607", "B105", "B608" ]
exclude_dirs = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "node_modules",
  "tests",
  "typings",
  "vendor",
]

[tool.complexipy]
max_complexity = 15
output_format = "plain"

[tool.vulture]
exclude = [
  ".*/examples/",
  ".*/scripts/",
  ".*/tests/",
  ".coverage.*",
  ".git/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  ".venv/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "tests/",
  "typings/",
  "vendor/",
]
min_confidence = 80
paths = [
  "**/src",
  "src",
]
sort_by_size = true
verbose = false
