# [MANAGED] FLEXT pyproject standardization
# Sections with [MANAGED] are enforced by flext_infra.deps.modernizer.
# Sections with [CUSTOM] are project-specific extension points.
# Sections with [AUTO] are derived from workspace layout and dependencies.
# [MANAGED] build system
[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2" ]

# [CUSTOM] project metadata
[project]
name = "flext-core"
version = "0.12.0-dev"
description = "Enterprise Foundation Framework - Modern Python 3.13 + Clean Architecture"
readme = "README.md"
keywords = [ "clean-architecture", "ddd", "enterprise", "flext", "modern", "solid" ]
license = "MIT"
maintainers = [ {email = "team@flext.sh", name = "FLEXT Team"} ]
authors = [ {email = "team@flext.sh", name = "FLEXT Team"} ]
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]
dependencies = [
  "attrs>=25.4,<26",
  "beartype>=0.19",
  "cachetools>=5.3",
  "dependency-injector>=4.41",
  "docker>=7.1,<8",
  "jinja2>=3.1.6",
  "limits>=3.6",
  "orjson>=3.11.3",
  "pybreaker>=0.8",
  "pydantic>=2.12.3",
  "pydantic-core>=2.41.4",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1",
  "python-on-whales>=0.79",
  "pyyaml>=6.0.2",
  "returns>=0.26",
  "structlog>=25.4",
  "tomlkit>=0.13",
  "wrapt>=1.17",
]
# [MANAGED] consolidated development dependencies
# [AUTO] merged from dev/docs/security/test/typings
optional-dependencies.dev = [
  "autoflake>=2.3.1",
  "bandit>=1.8",
  "beartype>=0.19",
  "black>=25.1",
  "codespell>=2.3",
  "deptry>=0.23",
  "detect-secrets>=1.5",
  "django-stubs>=5.2.2",
  "factory-boy>=3.3.1",
  "faker>=37.4",
  "hypothesis>=6.125",
  "interrogate>=1.7",
  "isort>=6.0.1",
  "mkdocs>=1.6",
  "mkdocs-awesome-pages-plugin>=2.9",
  "mkdocs-encryptcontent-plugin>=2",
  "mkdocs-exclude>=1",
  "mkdocs-get-deps>=0.2",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
  "mkdocs-literate-nav>=0.6",
  "mkdocs-macros-plugin>=1",
  "mkdocs-material>=9.5",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocs-mermaid2-plugin>=1.1",
  "mkdocs-minify-plugin>=0.7",
  "mkdocs-newsletter>=0.1",
  "mkdocs-print-site-plugin>=0.8",
  "mkdocs-redirects>=1.2",
  "mkdocs-section-index>=0.3",
  "mkdocs-versioning>=0.2",
  "mkdocstrings>=0.24",
  "mkdocstrings-python>=1.7",
  "mypy>=1.18.2",
  "pip-audit>=2.7.3",
  "pre-commit>=4.0.1",
  "pylint>=3.3",
  "pytest>=8.4",
  "pytest-benchmark>=5.1",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=6.2",
  "pytest-deadfixtures>=2.2.1",
  "pytest-env>=1.1.5",
  "pytest-mock>=3.14",
  "pytest-randomly>=3.16",
  "pytest-sugar>=1",
  "pytest-timeout>=2.4",
  "pytest-xdist>=3.8",
  "pyupgrade>=3.19",
  "radon>=6.0.1",
  "ruff>=0.12.3",
  "types-cachetools>=5.3",
  "types-docker>=7.1",
  "types-ldap3>=2.9.13.20250622",
  "types-protobuf>=6.30.2.20250703",
  "types-psutil>=7",
  "types-psycopg2>=2.9.21.20250718",
  "types-python-dateutil>=2.9",
  "types-pyyaml>=6.0.12",
  "types-redis>=4.6",
  "types-requests>=2.32.4",
  "types-setuptools>=80.9",
  "types-toml>=0.10.8.20240310",
  "uv>=0.9.6",
  "vulture>=2.13",
]
urls = {Documentation = "https://github.com/flext-sh/flext-core/blob/main/README.md", Homepage = "https://github.com/flext-sh/flext-core", Repository = "https://github.com/flext-sh/flext-core"}
scripts = {"flext-basemk" = "flext_infra.basemk:main", "flext-check" = "flext_infra.check:main", "flext-modernize" = "flext_infra.deps.modernizer:main", "flext-sync" = "flext_infra.workspace.sync:main", "flext-validate" = "flext_infra.core:main"}

# [CUSTOM] poetry - flext-core ships three namespace packages
[tool.poetry]
packages = [
  {include = "flext_core", from = "src"},
  {include = "flext_infra", from = "src"},
  {include = "flext_tests", from = "src"},
]

# [MANAGED] deptry

# [CUSTOM] poetry dev extensions
[tool.deptry]
pep621_dev_dependency_groups = [ "dev" ]

[tool.pytest.ini_options]
minversion = "8.0"
python_classes = [ "Test*" ]
python_files = [ "*_test.py", "*_tests.py", "test_*.py" ]
addopts = [ "--strict-markers" ]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "performance: performance and benchmark tests",
  "slow: slow-running tests",
  "docker: tests requiring Docker",
  "e2e: end-to-end integration tests",
  "edge_cases: edge case tests",
  "stress: stress tests",
  "resilience: resilience tests",
  "architecture: architectural pattern tests",
  "advanced: advanced pattern tests",
  "ddd: domain-driven design tests",
  "core: core functionality tests",
  "coverage: coverage-focused tests",
]
filterwarnings = [
  "ignore:Remove `format_exc_info` from your processor chain:UserWarning:structlog",
]

# [MANAGED] ruff

# [MANAGED] pyrefly
[tool.pyrefly]
ignore-errors-in-generated-code = true
python-version = "3.13"
search-path = [
  ".",
]

project-excludes = ["**/*_pb2*.py", "**/*_pb2_grpc*.py"]
[tool.pyrefly.errors]
deprecated = true
implicit-abstract-class = true
implicit-any = true
implicitly-defined-attribute = true
missing-override-decorator = true
missing-source = true
not-required-key-access = true
open-unpacking = true
protocol-implicitly-defined-attribute = true
redundant-cast = true
unannotated-attribute = true
unannotated-parameter = true
unannotated-return = true
